# toydiff

./: .flake8  .gitattributes  .gitignore  ALTERNATIVES.md  MANIFEST.in  README.md  requirements-base.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
Toydiff.egg-info/: PKG-INFO  SOURCES.txt
examples/: LinearRegression.ipynb  Untitled.ipynb  fma.ipynb  graph.ipynb  higher_order.ipynb  iteration.ipynb  speed_test.py
examples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
profiling/: ops.py  requirements-prof.txt
profiling/profs/0.2.1+14.gcfec38d.dirty/: n=MatMul.Backward_s=5000.prof  n=MatMul_s=5000.prof
src/avagrad/: __init__.py  _version.py  core.py  exceptions.py  random.py  testing.py  utils.py
src/avagrad/nn/: __init__.py  blocks.py  functional.py  init.py  optim.py
src/toydiff/: __init__.py  _version.py  core.py  exceptions.py  functional.py  random.py  testing.py  utils.py
src/toydiff/nn/: __init__.py  blocks.py  functional.py  init.py  optim.py
src/toydiff/utils/: __init__.py  decorators.py  grad.py  graph.py
tests/: test_core.py  test_ops.py  utils.py
tests/test_core/: test_funcs.py  test_graphs.py
tests/test_core/_test_funcs/test_binary/: test_add.py
tests/test_core/_test_funcs/test_unary/: test_cos.py  test_log.py  test_reshape.py
tests/test_core/test_funcs/test_binary/: test_add.py  test_divide.py  test_matmul.py  test_maximum.py  test_minimum.py  test_multiply.py  test_power.py  test_subtract.py
tests/test_nn/: test_functional.py
toydiff/: __init__.py  _version.py  ops.py
(+12 files in other folders)
